# slopper

./: Dockerfile  asr.py  docker-compose.yml  main.py  pyproject.toml  subtitles.py
test_ffmpeg/: test_general_quality.py
